# cmake-demos

./: README.md
add_ico_in_qt_demo/: CMakeLists.txt  app_win32.rc
add_libraries/: CMakeLists.txt
add_libraries/lib/: CMakeLists.txt  add.cpp
cross_compile/: CMakeLists.txt
cross_compile/add/: CMakeLists.txt  add.cpp  add.h
cross_compile/gcc-linaro-7.5.0-2019.12-i686-mingw32_arm-linux-gnueabihf/: README.md
cross_compile/gcc-linaro-7.5.0-2019.12-i686-mingw32_arm-linux-gnueabihf/cmake/: toolchain.cmake
findxxx_cmake_template/: CMakeLists.txt  main.cpp
import_opencv/: CMakeLists.txt  main.cpp
import_qt_demo/: CMakeLists.txt
multiple_dirs_demo/: CMakeLists.txt
multiple_dirs_demo/sub_dir1/: CMakeLists.txt
multiple_dirs_demo/sub_dir2/: CMakeLists.txt
multiple_files_demo/: CMakeLists.txt  add.h  main.cpp
qt_quick_demo/: CMakeLists.txt
simple_project_demo/: CMakeLists.txt
